# autocrypt-thunderbird

./: .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .jsbeautifyrc  .jshintrc  .travis.yml  COMPILING  LICENSE  Makefile  Makefile.in  README.md  build.sh  config.guess  config.sub  configure  configure.ac  genxpi  makefile.win  makemake  new_enigmail.csh  new_enigmime.csh  test.sh  uuid_enig.txt
config/: autoconf.mk.in  getOsTarget.pl
ipc/: Makefile  Makefile.enig  Makefile.in  Makefile.in.ipc  changelog.txt  docu.txt  makemake  makemake.cmd  readme.os2  readme.txt  review.txt
ipc/modules/: .eslintrc.js  Makefile  Makefile.enig  Makefile.in  enigmailprocess_common.jsm  enigmailprocess_main.jsm  enigmailprocess_shared.js  enigmailprocess_shared_unix.js  enigmailprocess_shared_win.js  enigmailprocess_unix.jsm  enigmailprocess_win.jsm  enigmailprocess_worker_common.js  enigmailprocess_worker_unix.js  enigmailprocess_worker_win.js  pipeTransport.jsm  subprocess.jsm  subprocess_worker_unix.js  subprocess_worker_win.js
ipc/public/: Makefile.enig  Makefile.in  Makefile.in.ipc  nsIIPCBuffer.idl  nsIIPCService.idl  nsIPipeChannel.idl  nsIPipeListener.idl  nsIPipeTransport.idl
ipc/src/: IPCProcess.cpp  IPCProcess.h  Makefile  Makefile.enig  Makefile.in  Makefile.in.ipc  ipc.h  nsIPCBuffer.cpp  nsIPCBuffer.h  nsIPCService.cpp  nsIPCService.h  nsPipeChannel.cpp  nsPipeChannel.h  nsPipeConsole.cpp  nsPipeConsole.h  nsPipeFilterListener.cpp  nsPipeFilterListener.h  nsPipeTransport.cpp  nsPipeTransport.h  nsProcessInfo.cpp  nsProcessInfo.h  subprocess.c
ipc/tests/: .eslintrc.js  IpcCat.cpp  IpcCat.pl  Makefile  Makefile.enig  Makefile.in  README  buftest.js  ipc.js  ipctest.js  main.js  pipetest.cpp  subprocess-test.js
lang/: Makefile  Makefile.in  current-languages.txt  jar.mn  make-lang-xpi.pl  make-lang.sh
lang/ar/: am-enigprefs.properties  contents.rdf  enigmail.dtd  enigmail.properties  upgrade_080.html
lang/bg/: enigmail.dtd  enigmail.properties
lang/bg-BG/: enigmail.dtd  enigmail.properties
lang/ca/: am-enigprefs.properties  contents.rdf  enigmail.dtd  enigmail.properties  upgrade_080.html
lang/ca-AD/: contents.rdf  enigmail.dtd  enigmail.properties  upgrade_080.html
lang/cs/: am-enigprefs.properties  enigmail.dtd  enigmail.properties
lang/cs-CZ/: am-enigprefs.properties  contents.rdf  enigmail.dtd  enigmail.properties
lang/da/: am-enigprefs.properties  enigmail.dtd  enigmail.properties
lang/de/: am-enigprefs.properties  enigmail.dtd  enigmail.properties
lang/de-AT/: contents.rdf  enigmail.dtd  enigmail.properties
lang/de-DE/: am-enigprefs.properties  contents.rdf  enigmail.dtd  enigmail.properties  upgrade_080.html
lang/el/: am-enigprefs.properties  contents.rdf  (+3 more)
mailnews/: Makefile.in  enigmail.js  makefile.win  nsIPGPMsgBody.idl
package/: .gitIgnore  .gitattributes  Makefile  Makefile.in  addrbook.jsm  amPrefsService.jsm  app.jsm  armor.jsm  attachment.jsm  autoKeyLocate.jsm  autoSetup.jsm  autocrypt.jsm  autocryptHelper.jsm  autocryptOverlays.jsm  autocryptSecret.jsm  autocryptSetup.jsm  autocryptSetupImport.jsm  bootstrap.js  card.jsm  chrome.manifest  clipboard.jsm  commandLine.jsm  commonFuncs.jsm  configBackup.jsm  configure.jsm  constants.jsm  core.jsm  coreService.jsm  cryptoAPI.jsm  data.jsm  decryptPermanently.jsm  decryption.jsm  dialog.jsm  dns.jsm  encryption.jsm  enigMsgCompFields.js  enigmail.js  enigmail.spec  enigmailCommon.jsm  enigmailConvert.jsm  (+111 more)
provisioning/: Dockerfile  README.md  Vagrantfile  docker-build.sh  docker-init.sh  docker-test.sh  provision-travis.sh  provision-vagrant.sh
public/: Makefile  Makefile.in  makefile.win  nsIEnigMimeDecrypt.idl  nsIEnigMimeHeaderSink.idl  nsIEnigMimeListener.idl  nsIEnigMimeReadCallback.idl  nsIEnigMimeService.idl  nsIEnigMimeVerify.idl  nsIEnigMimeWriter_moz18.idl  nsIEnigMimeWriter_moz19.idl  nsIEnigMsgCompFields.idl  nsIEnigMsgCompose.idl  nsIEnigScriptableMsgCompose.idl  nsIEnigmail.idl  nsIIPCService.idl  nsIPGPMsgHeader.idl  nsIPipeChannel.idl  nsIPipeConsole.idl  nsIPipeFilterListener.idl  thunderbird-enigmail.metainfo.xml
src/: Makefile.in  enigmail.h  ipc.h  makefile.win  mimedummy.cpp  mimedummy.h  mimeenc2.cpp  mimeenig.cpp  mimeenig.h  mimehdrs2.cpp  mimehdrs2.h  modmimee2.h  nsEnigContentHandler.cpp  nsEnigContentHandler.h  nsEnigMimeDecrypt.cpp  nsEnigMimeDecrypt.h  nsEnigMimeListener.cpp  nsEnigMimeListener.h  nsEnigMimeService.cpp  nsEnigMimeService.h  nsEnigMimeVerify.cpp  nsEnigMimeVerify.h  nsEnigMimeWriter.cpp  nsEnigMimeWriter.h  nsEnigMsgCompFields.cpp  nsEnigMsgCompFields.h  nsEnigMsgCompose.cpp  nsEnigMsgCompose.h  nsIPCService.cpp  nsIPCService.h  nsPipeChannel.cpp  nsPipeChannel.h  nsPipeConsole.cpp  nsPipeConsole.h  nsPipeFilterListener.cpp  nsPipeFilterListener.h  pgpmime.h
static_analysis/: eslint  jshint
stdlib/: LICENSE-openpgp.js.txt  Makefile  compose.jsm  misc.jsm  msgHdrUtils.jsm  openpgp-lib-head.js  openpgp-lib-tail.js  openpgp-lib.js  qrcode.jsm  send.jsm  web-streams.jsm
ui/: Makefile  Makefile.in  enigmail-en-US.spec  install.js  jar.mn  makefile.win
util/: Expression.py  JarMaker.py  MozZipFile.py  Preprocessor.py  build.mk  buildlist.py  checkFiles.py  fixlang.pl  genxpi  gpg-agent-wrapper.sh  header.py  install  make-lang-xpi.pl  run-jsunit  run-tests.py  typelib.py  utils.py  xpidl.py  xpidlyacc.py  xptgen
(+736 files in other folders)
